--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,180 +8,145 @@
     android:layout_gravity="bottom"
     tools:context=".MainActivity">
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="344dp"
-        android:background="@color/blue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/LinearFont"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/blue"
+            android:gravity="center_horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="328dp"
-        android:layout_height="105dp"
-        android:fontFamily="@font/lato"
-        android:text="¡Te damos la bienvenida!"
-        android:textColor="@color/white"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.192"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.215" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="56dp"
+                android:layout_marginBottom="40dp"
+                android:gravity="center_horizontal"
+                app:srcCompat="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="366dp"
-        android:layout_height="47dp"
-        android:fontFamily="@font/lato"
-        android:text="A la App ORO de Jamar, donde podrás realizar tu autogestión."
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.355"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.334" />
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_gravity="left"
+                app:srcCompat="@drawable/group_3"
+                android:layout_marginBottom="8dp"/>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="344dp"
-        android:layout_height="48dp"
-        android:fontFamily="@font/lato"
-        android:text="Primero, ingresa tu número de documento y daremos el siguiente paso a verificar tu identidad."
-        android:textColor="@color/soft_gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:text="¡Te damos la bienvenida!"
+                android:textColor="@color/white"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="12dp"
+                android:textSize="40dp" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="30dp"
+                android:text="A la App ORO de Jamar, donde podrás realizar tu autogestión."
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="140dp"
-        android:layout_height="20dp"
-        android:fontFamily="@font/lato"
-        android:text="Tipo de documento"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.059"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
+            app:srcCompat="@drawable/circle" />
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="220dp"
-        android:layout_height="56dp"
-        android:layout_marginEnd="176dp"
-        android:contentDescription="Selecciona una opción"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.558" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="163dp"
-        android:layout_height="17dp"
-        android:fontFamily="@font/lato"
-        android:text="Número de documento"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.61" />
-
-    <CheckBox
-        android:id="@+id/checkBox"
-        style="@style/MyCheckBoxStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="144dp"
-        android:layout_marginBottom="220dp"
-        android:fontFamily="@font/lato"
-        android:text="Aceptar los términos y condiciones"
-        android:textColor="@color/soft_gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="351dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:fontFamily="@font/lato"
-        android:inputType="textPersonName"
-        android:text="Ingresa tu número de documento"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.664" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/my_button"
-        android:layout_width="348dp"
-        android:layout_height="55dp"
-        android:fontFamily="@font/lato"
-        android:text="Verifica mi identidad"
-        app:backgroundTint="@color/black"
-        app:cornerRadius="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.819" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="300dp"
-        android:layout_height="77dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.019"
-        app:srcCompat="@drawable/logo" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.043"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.139"
-        app:srcCompat="@drawable/group_3" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/circle" />
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/LinearFont"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:fontFamily="@font/lato"
+                android:text="Primero, ingresa tu número de documento y daremos el siguiente paso a verificar tu identidad."
+                android:textColor="@color/soft_gray"
+                />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:text="Tipo de documento"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+            <Spinner
+                android:id="@+id/my_spinner"
+                android:layout_width="328dp"
+                android:layout_height="44dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:contentDescription="Selecciona una opción"
+                android:background="@drawable/spinner_border" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="163dp"
+                android:layout_height="17dp"
+                android:fontFamily="@font/lato"
+                android:text="Número de documento"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+            <EditText
+                android:id="@+id/editTextTextPersonName"
+                android:layout_width="328dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="16dp"
+                android:ems="10"
+                android:fontFamily="@font/lato"
+                android:textColor="@color/soft_gray"
+                android:inputType="textPersonName"
+                android:hint="Ingresa tu número de documento" />
+            <CheckBox
+                android:id="@+id/checkBox"
+                style="@style/MyCheckBoxStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="16dp"
+                android:fontFamily="@font/lato"
+                android:text="Aceptar los términos y condiciones"
+                android:textColor="@color/soft_gray" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/my_button"
+                android:layout_width="328dp"
+                android:layout_height="50dp"
+                android:fontFamily="@font/lato"
+                android:text="Verifica mi identidad"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:enabled="false"
+                android:textAllCaps="false"
+                android:allowClickWhenDisabled="false"
+                android:textSize="20sp"
+                app:cornerRadius="24dp" />
+        </LinearLayout>
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
