--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,5 +6,7 @@
         <item name="android:outlineProvider">@null</item>
         <item name="android:focusable">false</item>
         <item name="android:clickable">true</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">normal</item>
     </style>
 </resources>
